--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,6 @@
     <string name="view_historical_body_data">查看过往身体数据</string>
     <string name="record_uric_acid_val">录入尿酸数据</string>
     <string name="record_blood_pressure_val">录入血压数据</string>
+    <string name="confirm">确定</string>
+    <string name="cancel">取消</string>
 </resources>
