UI design for view data activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,7 @@
     <string name="blood_sugar_unit">mmol/L</string>
     <string name="blood_pressure_unit">mmHg</string>
     <string name="heart_beat_unit">bpm</string>
+    <string name="blood_pressure_history">血压记录</string>
+    <string name="uric_acid_history">尿酸记录</string>
+    <string name="edit">编辑</string>
 </resources>
