--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,7 @@
     <string name="edit">编辑</string>
     <string name="content_in_table">列表 </string>
     <string name="content_in_graph">图表</string>
+    <string name="database_name">BodyMonitoring.db</string>
+    <string name="uric_acid_table_name_in_db">UricAcid</string>
+    <string name="blood_pressure_table_name_in_db">BloodPressure</string>
 </resources>
