--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,8 @@
     <string name="view_historical_body_data">查看过往身体数据</string>
     <string name="record_uric_acid_val">录入尿酸数据</string>
     <string name="record_blood_pressure_val">录入血压数据</string>
+    <string name="edit_uric_acid_val">修改尿酸数据</string>
+    <string name="edit_blood_pressure_val">修改血压数据</string>
     <string name="confirm">确定</string>
     <string name="cancel">取消</string>
     <string name="uric_acid_unit">μmol/L</string>
@@ -23,4 +25,6 @@
     <string name="database_name">BodyMonitoring.db</string>
     <string name="uric_acid_table_name_in_db">UricAcid</string>
     <string name="blood_pressure_table_name_in_db">BloodPressure</string>
+    <string name="date">日期</string>
+    <string name="time">时间</string>
 </resources>
